--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -24,16 +24,16 @@
       <header id="overview">
         <div class="pt">
           <span>&gt;&gt;</span>
-          <a href="{{ get_url(path="@/_index.md",lang=lang) }}">{{trans(key="label_home",lang=lang)}}</a>
+          <a href="{{ get_url(path="@/_index.md") }}">{{trans(key="label_home")}}</a>
           {% if page.taxonomies %}
           <span class="divider">/</span>
-          <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0],lang=lang) }}">{{
+          <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0]) }}">{{
             page.taxonomies.categories[0] }}</a>
           
           {% if page.taxonomies.tags -%}
           <span class="divider">/</span>
           {% for tag in page.taxonomies.tags %}
-          <a href="{{ get_taxonomy_url(kind="tags", name=tag,lang=lang) }}">{{ tag }}</a>{% if page.taxonomies.tags | length > 1 %}{% if
+          <a href="{{ get_taxonomy_url(kind="tags", name=tag) }}">{{ tag }}</a>{% if page.taxonomies.tags | length > 1 %}{% if
           loop.index != page.taxonomies.tags | length %},{% endif %}{% endif %}
           {% endfor %}
           {% endif %}
@@ -43,7 +43,7 @@
         <div>
           <h1>{{ page.title }}</h1>
           <div class="muted">
-            <span>{% block detail_meta_slot %}{% endblock detail_meta_slot %}</span><span>{% if page.date %}{{ trans(key="label_created",lang=lang)}} {{ page.date }}{% endif %}{% if page.updated %} | {{trans(key="label_updated",lang=lang)}} {{ page.updated }} {% endif %}</span>
+            <span>{% block detail_meta_slot %}{% endblock detail_meta_slot %}</span><span>{% if page.date %}{{ trans(key="label_created")}} {{ page.date }}{% endif %}{% if page.updated %} | {{trans(key="label_updated")}} {{ page.updated }} {% endif %}</span>
           </div>
         </div>
 
@@ -60,17 +60,9 @@
           {% if config.extra.email %}
           <div id="email-comment" class="muted text-sm">
             <hr class="w-full">
-            {% if config.default_language != lang %}
-            <p>
-              If you have anything want to discuss, feel free to contact me via <a href="mailto:mimir@hey.com?subject={{ "Reply: " ~ page.title | urlencode }}">mail:</a><code>mimir@hey.com</code>
-            </p>
-            {% else %}
             <p>
               如果你對於<a href="https://pinchlime.com">本站</a>或本文有任何想討論或分享的，歡迎<a class="muted" href="mailto:mimir@hey.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>mimir@hey.com</code> 找我聊聊！
-            </p>
-            {% endif %}
-            
-
+            </p>          
           </div>
           {% endif %}
 
@@ -84,7 +76,7 @@
 {% block sidebar %}
 <aside class="sidebar">
 <div class="sidebar-element">
-<h2>看{{trans(key="label_new_posts_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
+<h2>看{{trans(key="label_new_posts_list_title") | markdown(inline=true) | safe}}</h2>
 <ul>
   {% set all_blog_pages = get_section(path="blog/_index.md") -%}
   {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
@@ -109,7 +101,7 @@
 <h2>看更多文章</h2>
 <ul>
   <li class="no-underline">
-    <a href="/tag-list/">{{ trans(key="label_tags",lang=lang) }}</a>
+    <a href="/tag-list/">{{ trans(key="label_tags") }}</a>
   </li>
   <li class="no-underline">
     <a href="/archive/">依時序</a>
