--- a/templates/section.html
+++ b/templates/section.html
@@ -8,10 +8,7 @@
 {% block ogdesc %}{{ section.title }}{% endblock ogdesc %}
 {% block ogurl %}{{ config.base_url }}{{ section.path }}{% endblock ogurl %}
 {% block main %} 
-{% set_global file_lang_path = "" %} 
-{% if config.default_language != lang %} 
-{% set_global file_lang_path = "." ~ lang %} 
-{% endif %}
+
 <section>
   {% if paginator %} {% for page in paginator.pages %} {{
   macro::post_max(page=page) }} {% endfor %} {{ macro::paginator(ref=paginator,
@@ -22,11 +19,11 @@
 {% block sidebar %}
   <aside class="sidebar">
     <div class="sidebar-element">
-    <h2><a class="no-underline" href="{{lang_prefix_path}}categories/">{{ trans(key="label_categories",lang=lang) }}</h2></a>
+    <h2><a class="no-underline" href="/categories/">{{ trans(key="label_categories") }}</h2></a>
     <ul>
-      {% set categories = get_taxonomy(kind="categories",lang=lang) %} 
+      {% set categories = get_taxonomy(kind="categories") %} 
       {% for cat in categories.items %}
-      {% set url = get_taxonomy_url(kind="categories",lang=lang, name=cat.name) %}
+      {% set url = get_taxonomy_url(kind="categories", name=cat.name) %}
       <li>
         <a class="no-underline" href="{{ url }}">{{ cat.name }} ({{ cat.pages | length }})</a>
       </li>
@@ -34,7 +31,7 @@
     </ul>
     </div>
     <div class="sidebar-element">
-    <h2>{{trans(key="label_new_posts_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
+    <h2>{{trans(key="label_new_posts_list_title") | markdown(inline=true) | safe}}</h2>
     <ul>
       {% set all_blog_pages = get_section(path="blog/_index.md") -%}
             {% for page in all_blog_pages.pages | slice(start=0,end=10)  %} 
@@ -43,12 +40,12 @@
             </li>
             {% endfor %} 
             <li class="no-underline">
-            {{trans(key="label_all_posts",lang=lang) | markdown(inline=true) | safe}}
+            {{trans(key="label_all_posts") | markdown(inline=true) | safe}}
             </li>
     </ul>
     </div>
     <div class="sidebar-element">
-    <h2>{{trans(key="label_new_newsletters_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
+    <h2>{{trans(key="label_new_newsletters_list_title") | markdown(inline=true) | safe}}</h2>
     <ul>
         {% set all_blog_pages = get_section(path="newsletters/_index.md") -%}
           {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
@@ -57,12 +54,12 @@
           </li>
           {% endfor %} 
           <li class="no-underline">
-          {{trans(key="label_all_newsletters",lang=lang) | markdown(inline=true) | safe}}
+          {{trans(key="label_all_newsletters") | markdown(inline=true) | safe}}
           </li>
     </ul>
     </div>
     <div class="sidebar-element">
-    <h2>{{trans(key="label_new_snapshots_list_title",lang=lang) | markdown(inline=true) | safe}}</h2>
+    <h2>{{trans(key="label_new_snapshots_list_title") | markdown(inline=true) | safe}}</h2>
     <ul>
         {% set all_blog_pages = get_section(path="snapshots/_index.md") -%}
           {% for page in all_blog_pages.pages | slice(start=0,end=5)  %} 
@@ -71,24 +68,24 @@
           </li>
           {% endfor %}
           <li class="no-underline"> 
-          {{trans(key="label_all_snapshots",lang=lang) | markdown(inline=true) | safe}}
+          {{trans(key="label_all_snapshots") | markdown(inline=true) | safe}}
           </li>
     </ul>
     </div>
     <div class="sidebar-element">
-    <h2>{{trans(key="label_sorting_articles",lang=lang) | markdown(inline=true) | safe}}</h2>
+    <h2>{{trans(key="label_sorting_articles") | markdown(inline=true) | safe}}</h2>
     <ul>
         <li class="no-underline">
-          <a href="{{lang_prefix_path}}tag-list/">{{ trans(key="label_tags",lang=lang) }}</a>
+          <a href="/tag-list/">{{ trans(key="label_tags") }}</a>
         </li>
         <li class="no-underline">
-          <a href="{{lang_prefix_path}}archive/">{{ trans(key="label_archive",lang=lang) }}</a>
+          <a href="/archive/">{{ trans(key="label_archive") }}</a>
         </li>
         <li class="no-underline">
-          <a href="{{lang_prefix_path}}newsletters/archive/">{{ trans(key="label_newsletter_archive",lang=lang) }}</a>
+          <a href="/newsletters/archive/">{{ trans(key="label_newsletter_archive") }}</a>
         </li>
         <li class="no-underline">
-          <a href="{{lang_prefix_path}}snapshots/archive/">{{ trans(key="label_snapshot_archive",lang=lang) }}</a>
+          <a href="/snapshots/archive/">{{ trans(key="label_snapshot_archive") }}</a>
         </li>
     </ul>
     </div>
