--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -331,7 +331,13 @@ a.muted,
 }
 .menu-button {
   text-decoration: none;
-  margin-left: 1rem;
+  margin-left: 1.5rem;
+}
+.menu-button-search {
+  text-decoration: none;
+  margin-left: 1.5rem;
+  height: 20px;
+  width: 20px;
 }
 .m-l-2 {
   margin-left: 0.5rem;
@@ -378,7 +384,7 @@ a.muted,
   padding-left: 1.4rem;
 }
 .navbar-name {
-  display: inline-block;
+  display: flex;
   font-size: 15px;
   position: relative;
   vertical-align: middle;
@@ -630,5 +636,12 @@ li.inline {
     text-decoration: none;
     margin-left: 0.2rem;
     margin-right: 0.2rem;
+  }
+  .menu-button-search {
+    text-decoration: none;
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
+    height: 16px;
+    width: 16px;
   }
 }
