--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,9 @@
           <a class="menu-button" href="/blog/">Blog</a>
           <a class="menu-button" href="/newsletters/">Newsletters</a>
           <a class="menu-button" href="/snapshots/">Snapshots</a>
-          <a class="menu-button" href="/search/">Search</a>
+          <a class="menu-button-search" href="/search/">
+            <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/search-icon_IsXZSS.svg" alt="search-icon" >
+          </a>
         </div>
         </div>
       </nav>
