--- a/templates/macros.html
+++ b/templates/macros.html
@@ -36,22 +36,22 @@
 
 
 {% macro post_min(page) %}
-<div style="display: flex;justify-content: space-between;line-height: 75%;">
-<a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a> 
+<div style="display: flex;justify-content: space-between">
+<a class="no-underline li_archive" href="{{ page.permalink }}">{{ page.title }}</a> 
 <span class="muted text-sm" style="font-family: menlo;">{{ page.date }}</span>
 </div>
 {% endmacro post_min %}
 
 {% macro snapshots_min(page) %}
-<div style="display: flex;justify-content: space-between;line-height: 75%;">
-<a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a> 
+<div style="display: flex;justify-content: space-between">
+<a class="no-underline li_archive" href="{{ page.permalink }}">{{ page.title }}</a> 
 <span class="muted text-sm" style="font-family: menlo;">{{ page.date }}</span>
 </div>
 {% endmacro post_min %}
 
 {% macro newsletters_min(page) %}
-<div style="display: flex;justify-content: space-between;line-height: 75%;">
-  <div>
+<div style="display: flex;justify-content: space-between">
+  <div class="li_archive">
     <span>＃{{page.extra.issues }} </span><a class="no-underline" href="{{ page.permalink }}">{{ page.title }}</a> 
   </div>
   <span class="muted text-sm" style="font-family: menlo;">{{ page.date }}</span>
