add mastodon backlink

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="{{ get_url(path="site/images/favicon-96x96.png",cachebust=true) }}"> 
     <link rel="icon" type="image/png" sizes="16x16" href="{{ get_url(path="site/images/favicon-16x16.png",cachebust=true) }}"> 
     <link rel="manifest" href="{{ get_url(path="site/images/manifest.json") }}">
+    <link rel="me" href="https://pkm.social/@pj"> 
     <meta name="msapplication-TileColor" content="{{ config.extra.theme_color }}" />
     <meta name="msapplication-TileImage" content="{{ get_url(path="site/images/ms-icon-144x144.png",cachebust=true) }}">
     <meta name="theme-color" content="{{ config.extra.theme_color }}" />
