update contact info

--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -61,7 +61,7 @@
           <div id="email-comment" class="muted text-sm">
             <hr class="w-full">
             <p>
-              如果你對於<a href="https://pinchlime.com">本站</a>或本文有任何想討論或分享的，歡迎<a class="muted" href="mailto:mimir@hey.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>mimir@hey.com</code> 找我聊聊！
+              如果你對於<a href="https://pinchlime.com">本站</a>或本文有任何想討論或分享的，歡迎<a class="muted" href="mailto:pj@pinchlime.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>pj@pinchlime.com</code> 找我聊聊！
             </p>          
           </div>
           {% endif %}
