--- a/templates/glossary_page.html
+++ b/templates/glossary_page.html
@@ -82,7 +82,7 @@
           <div id="email-comment" class="muted text-sm">
             <hr class="w-full">
             <p>
-              如果你對於這個詞彙的定義有更好的版本，歡迎<a class="muted" href="{{ config.extra.edit_url_prefix~page.relative_path }}">透過 Github 連結提交 commit 共同編輯</a>，或者<a class="muted" href="mailto:mimir@hey.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>mimir@hey.com</code> 跟我分享！
+              如果你對於這個詞彙的定義有更好的版本，歡迎<a class="muted" href="{{ config.extra.edit_url_prefix~page.relative_path }}">透過 Github 連結提交 commit 共同編輯</a>，或者<a class="muted" href="mailto:pj@pinchlime.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>pj@pinchlime.com</code> 跟我分享！
             </p>
           </div>
           {% endif %}
