--- a/templates/search.html
+++ b/templates/search.html
@@ -57,7 +57,7 @@
           </div>
         <script async defer src="https://comments.pinchlime.com/js/cusdis.es.js"></script>
         <p class="muted text-sm">
-            如果你對於搜尋結果不太滿意，歡迎留言跟我分享，或者來信到<code>mimir@hey.com</code> 告訴我你的想法。
+            如果你對於搜尋結果不太滿意，歡迎留言跟我分享，或者來信到<code>pj@pinchlime.com</code> 告訴我你的想法。
         </p>
         </section>
         
