--- a/templates/page.html
+++ b/templates/page.html
@@ -88,18 +88,9 @@
           </div>
           {% endif %}
           {% endblock outro %}
-          <section id="cusdis">
-          <h3>Write your comment</h3>
-          <br>
-          <div id="cusdis_thread"
-          data-host="https://comments.pinchlime.com"
-          data-app-id="d39e9f8e-53f2-48bc-a699-980cc0a4b00c"
-          data-page-id="{{ page.path }}"
-          data-page-url="{{ config.base_url }}{{ page.path }}"
-          data-page-title="{{ page.title }}"
-          data-theme="light"
-          ></div>
-          <script async defer src="https://comments.pinchlime.com/js/cusdis.es.js"></script>
+          <section id="comment">
+            <script defer src="https://chirpy.dev/bootstrap/comment.js" data-chirpy-domain="pinchlime.com"></script>
+            <div data-chirpy-comment="true"></div>
           </section>
           <section id="contact">
           </section>
