--- a/templates/search.html
+++ b/templates/search.html
@@ -45,17 +45,8 @@
             </p>
           </div>
           <hr class="w-full">
-          <h3>Write your comment</h3>
-          <br>
-          <div id="cusdis_thread"
-          data-host="https://comments.pinchlime.com"
-          data-app-id="d39e9f8e-53f2-48bc-a699-980cc0a4b00c"
-          data-page-id="{{ page.path }}"
-          data-page-url="{{ config.base_url }}{{ page.path }}"
-          data-page-title="{{ page.title }}"
-          data-theme="light">
-          </div>
-        <script async defer src="https://comments.pinchlime.com/js/cusdis.es.js"></script>
+          <script defer src="https://chirpy.dev/bootstrap/comment.js" data-chirpy-domain="pinchlime.com"></script>
+          <div data-chirpy-comment="true"></div>
         <p class="muted text-sm">
             如果你對於搜尋結果不太滿意，歡迎留言跟我分享，或者來信到<code>pj@pinchlime.com</code> 告訴我你的想法。
         </p>
